# open-stock-data

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yaml
open_stock_data/: __init__.py  cache.py  client.py  eastmoney_patch.py  exceptions.py  indicators.py  logging_safety.py  utils.py
open_stock_data/data_provider/: __init__.py  akshare_fetcher.py  alphavantage_fetcher.py  baostock_fetcher.py  base.py  capability.py  capability_definitions.py  circuit_breaker.py  columns.py  contracts.py  default_routes.py  efinance_fetcher.py  failover.py  fetcher_examples.py  market_config.py  providers.py  pytdx_fetcher.py  routing.py  stock_code.py  tickflow_fetcher.py  tushare_fetcher.py  types.py  yfinance_fetcher.py
open_stock_data/tools/: __init__.py  crypto.py  market.py  us_stock.py
open_stock_data/tools/a_stock/: __init__.py  analysis.py  info.py  market_flow.py  prices.py  quant.py  shareholders.py  valuation.py
scripts/: migrate_fetcher.py
tests/: .env.example  __init__.py  conftest.py  run_network_tests.py  test_a_stock.py  test_a_stock_market_sentiment.py  test_a_stock_shareholders.py  test_a_stock_valuation.py  test_akshare_a_stock_spot_em.py  test_akshare_source_priority.py  test_backend_failure_scope.py  test_batch_realtime_prefetch.py  test_capability.py  test_common.py  test_crypto.py  test_data_client.py  test_default_routes.py  test_eastmoney_patch.py  test_function_priority_filtering.py  test_hk_stock.py  test_industry_pe_fallback.py  test_logging_safety.py  test_market_news.py  test_route_executor.py  test_spot_cache.py  test_spot_priority.py  test_symbol_normalization.py  test_tickflow_fetcher.py  test_tool_exception_contract.py  test_tushare_board_cache.py  test_us_stock.py  test_utils.py
