[project]
name = "open-stock-data"
dynamic = ["version"]
description = "Core library for stock/crypto data with multi-source failover"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["stock", "trading", "multi-source", "akshare", "efinance", "tushare"]
license = { text = "MIT" }
dependencies = [
    "akshare>=1.17.0",
    "efinance>=0.5.0",
    "baostock>=0.8.8",
    "yfinance>=0.2.0",
    "tushare>=1.4.0",
    "tenacity>=8.0.0",
    "cachetools>=6.2.0",
    "diskcache>=5.6.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "pytdx>=1.72",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/openstockdata/open-stock-data"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["open_stock_data*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]


[tool.pytest.ini_options]
markers = [
    "a_stock: A股相关测试",
    "hk_stock: 港股相关测试",
    "us_stock: 美股相关测试",
    "crypto: 加密货币相关测试",
    "network: 需要网络访问的测试",
    "requires_alpha_vantage: 依赖 Alpha Vantage API Key 的测试",
]

# 覆盖率只针对新的路由/契约/客户端核心（数据源/美股/单源工具依赖网络，另行集成测试）。
# 门槛（fail_under=90）在 coverage 侧，运行方式：
#   COVERAGE_CORE=sysmon uv run pytest tests/ -m "not network" \
#       --cov=open_stock_data.client --cov=open_stock_data.data_provider.routing \
#       --cov=open_stock_data.data_provider.contracts --cov=open_stock_data.data_provider.default_routes
# 默认 addopts 不挂 --cov，避免 coverage tracer 与本机 numpy 2.4 的 C 扩展冲突拖垮日常测试。
[tool.coverage.run]
core = "sysmon"  # 用 Python 3.12+ sys.monitoring，规避 C tracer 与 numpy 2.4+ 冲突

[tool.coverage.report]
fail_under = 90
show_missing = true
